docs(demo-app): add alpha component to examples

--- a/src/demo-app/app/color-picker/components/color-picker-examples.component.html
+++ b/src/demo-app/app/color-picker/components/color-picker-examples.component.html
@@ -53,6 +53,9 @@
   </mat-card-content>
 </mat-card>
 
+<!-- WITH ALPHA ENABLED -->
+<app-color-picker-alpha></app-color-picker-alpha>
+
 <!-- REVERSE USED COLOR -->
 <mat-card>
   <mat-card-header>
