docs: add selected_svg_icon

--- a/src/demo-app/app/color-picker/color-picker.component.html
+++ b/src/demo-app/app/color-picker/color-picker.component.html
@@ -79,6 +79,13 @@
       </tr>
       <tr>
         <td>
+          <code>selected_svg_icon: string</code>
+        </td>
+        <td class="api-description">Define svg URL icon to be used on selected colors (need HttpClientModule)</td>
+        <td class="api-description">null</td>
+      </tr>
+      <tr>
+        <td>
           <code>disable_selected_icon: boolean</code>
         </td>
         <td class="api-description">Disable selected icon showed when color is selected</td>
