docs: add router link active

--- a/src/demo-app/app/app.component.html
+++ b/src/demo-app/app/app.component.html
@@ -4,28 +4,28 @@
     <mat-toolbar>Components</mat-toolbar>
 
     <mat-nav-list>
-      <mat-list-item>
+      <mat-list-item routerLinkActive="active">
         <a routerLink="/color-picker">
           <mat-icon>colorize</mat-icon>
           Color Picker
         </a>
       </mat-list-item>
 
-      <mat-list-item>
+      <mat-list-item routerLinkActive="active">
         <a routerLink="/timer-picker">
           <mat-icon>timer</mat-icon>
           Timer Picker
         </a>
       </mat-list-item>
 
-      <mat-list-item>
+      <mat-list-item routerLinkActive="active">
         <a routerLink="/speed-dial">
           <mat-icon>add_circle_outline</mat-icon>
           Speed Dial
         </a>
       </mat-list-item>
 
-      <mat-list-item>
+      <mat-list-item routerLinkActive="active">
         <a routerLink="/scrollspy">
           <mat-icon>view_list</mat-icon>
           Scrollspy
