docs: refactor main page of speed dial component

--- a/src/demo-app/app/speed-dial/speed-dial.component.html
+++ b/src/demo-app/app/speed-dial/speed-dial.component.html
@@ -26,6 +26,23 @@
       </mat-grid-tile>
     </mat-grid-list>
 
+    <p>This is a implementation of speed dial for material design.</p>
+    <p>To use this component, just import the module from
+      <code>material-community-component</code> package.</p>
+
+    <pre class="code-snippet"><code class="lang-typescript">  import {{ '{' }} MccSpeedDialModule {{ '}' }} from
+      'material-community-components';
+
+  <span class="hljs-variable">@NgModule</span>({{ '{' }}
+      ...
+    <span class="hljs-attribute">imports</span>: [
+      MccSpeedDialModule
+    ]
+    ...
+      {{ '}' }})
+  </code>
+</pre>
+
   </mat-tab>
 
   <mat-tab>
