feat(color-picker): reference svg icon only by name

--- a/src/demo-app/app/color-picker/color-picker.component.html
+++ b/src/demo-app/app/color-picker/color-picker.component.html
@@ -81,7 +81,7 @@
         <td>
           <code>selected_svg_icon: string</code>
         </td>
-        <td class="api-description">Define svg URL icon to be used on selected colors (need HttpClientModule)</td>
+        <td class="api-description">Define SVG icon name to be used on selected colors (nees to be registered in MatIconRegistry). Overrides "selected_icon"</td>
         <td class="api-description">null</td>
       </tr>
       <tr>
