feat(color-picker): fix size and positioning of svg icon

--- a/src/lib/color-picker/color-picker-collection.component.scss
+++ b/src/lib/color-picker/color-picker-collection.component.scss
@@ -32,11 +32,19 @@ button {
   margin: 3px;
 
   mat-icon {
+    color: #ffffff;
+  }
+
+  .mat-font-icon {
     width: 10px;
     height: 10px;
-    color: #ffffff;
     font-size: .8rem;
     font-weight: 600;
     margin: -1.3rem 0 0 -.15rem;
+  }
+
+  .mat-svg-icon {
+    margin: -1.3rem 0 0 0;
+    width: 14px;
   }
 }
