--- a/src/lib/color-picker/color-picker-collection.component.html
+++ b/src/lib/color-picker/color-picker-collection.component.html
@@ -10,11 +10,9 @@
                 [mccColorPickerOption]="color" (click)="setColor(color)">
 
           <ng-container *ngIf="!disableSelectedIcon">
-            <mat-icon *ngIf="selectedColor === color; else emptyIcon"
-                      [svgIcon]="selectedSvgIcon">{{ selectedIcon }}</mat-icon>
-            <ng-template #emptyIcon>
-              <mat-icon></mat-icon>
-            </ng-template>
+            <mat-icon *ngIf="selectedColor !== color"></mat-icon>
+            <mat-icon *ngIf="selectedColor === color && !selectedSvgIcon" class="mat-font-icon">{{ selectedIcon }}</mat-icon>
+            <mat-icon *ngIf="selectedColor === color && selectedSvgIcon"  class="mat-svg-icon" [svgIcon]="selectedSvgIcon"></mat-icon>
           </ng-container>
 
         </button>
