--- a/src/lib/color-picker/color-picker.component.html
+++ b/src/lib/color-picker/color-picker.component.html
@@ -28,11 +28,24 @@
             [height]="colorPickerSelectorHeight" (changeSelectedColor)="updateTmpSelectedColor($event)">
         </mcc-color-picker-selector>
 
-        <mcc-color-picker-collection *ngIf="!hideUsedColors" [label]="usedColorLabel" [size]="usedSizeColors" [transparent]="!hideTransparent"
-            [hideEmpty]="hideEmpty" [colors]="usedColors$ | async" (changeColor)="updateTmpSelectedColor($event)">
-        </mcc-color-picker-collection>
+        <!-- show used colors on top -->
+        <ng-container *ngIf="!hideUsedColors && usedColorsPosition == 'top'">
+          <mcc-color-picker-collection [label]="usedColorLabel" [size]="usedSizeColors"
+                                       [transparent]="!hideTransparent" [hideEmpty]="hideEmpty"
+                                       [colors]="usedColors$ | async" (changeColor)="updateTmpSelectedColor($event)">
+          </mcc-color-picker-collection>
+        </ng-container>
 
+        <!-- render user collections -->
         <ng-content></ng-content>
+
+        <!-- show used colors on bottom -->
+        <ng-container *ngIf="!hideUsedColors && usedColorsPosition == 'bottom'">
+          <mcc-color-picker-collection [label]="usedColorLabel" [size]="usedSizeColors"
+                                       [transparent]="!hideTransparent" [hideEmpty]="hideEmpty" [colors]="usedColors$
+                                        | async" (changeColor)="updateTmpSelectedColor($event)">
+          </mcc-color-picker-collection>
+        </ng-container>
 
         <div *ngIf="!hideButtons" class="mcc-color-picker-actions">
 
