docs(demo): add used colors position

--- a/src/demo-app/app/color-picker/components/color-picker-api.component.html
+++ b/src/demo-app/app/color-picker/components/color-picker-api.component.html
@@ -38,6 +38,12 @@
     </tr>
     <tr>
       <td>
+        <code>usedColorsPosition: MccUsedColorsPosition</code>
+      </td>
+      <td class="api-description">Set position for used colors collection to be show</td>
+    </tr>
+    <tr>
+      <td>
         <code>hideHexForms: boolean</code>
       </td>
       <td class="api-description">Hide the hexadecimal color input form</td>
@@ -317,6 +323,11 @@
 <p>Is a type created to handle colors. This type accept
   <code>string</code> or
   <code>MccColorPickerItem</code>.</p>
+
+<h3>MccUsedColorsPosition</h3>
+<p>Is a type created to handle used colors position. This type accept the values
+  <code>top</code> and
+  <code>bottom</code>.</p>
 
 <h3>MccColorPickerItem</h3>
 <p>This interface is used when you have the name of the color. This can help screen readers.</p>
