docs(demo): add highlight class

--- a/src/demo-app/app/color-picker/color-picker.component.html
+++ b/src/demo-app/app/color-picker/color-picker.component.html
@@ -101,9 +101,9 @@
       </tbody>
     </table>
 
-    <p>For the
-      <code>@Input</code> and
-      <code>@Output</code> of the component, check API tab.
+    <p>For
+      <code class="highlight">@Input</code> and
+      <code class="highlight">@Output</code> of the component, check API tab.
     </p>
 
   </mat-tab>
