--- a/src/demo-app/app/color-picker/components/color-picker-api.component.html
+++ b/src/demo-app/app/color-picker/components/color-picker-api.component.html
@@ -269,9 +269,9 @@
 
 <h2>Directives</h2>
 
-<p>Using the
-  <code>MccColorPickerOrigin</code> and
-  <code>MccConnectedColorPicker</code>, you also can connect the color picker with any input, textarea or select element.</p>
+<p>Using
+  <code class="highlight">MccColorPickerOrigin</code> and
+  <code class="highlight">MccConnectedColorPicker</code>, you also can connect the color picker with any input, textarea or select element.</p>
 
 <h3>MccColorPickerOrigin</h3>
 <p>This directive goes in the element (input, textarea or select) that will be connected to the color picker.</p>
@@ -321,13 +321,13 @@
 
 <h3>MccColorPickerOption</h3>
 <p>Is a type created to handle colors. This type accept
-  <code>string</code> or
-  <code>MccColorPickerItem</code>.</p>
+  <code class="highlight">string</code> or
+  <code class="highlight">MccColorPickerItem</code>.</p>
 
 <h3>MccUsedColorsPosition</h3>
 <p>Is a type created to handle used colors position. This type accept the values
-  <code>top</code> and
-  <code>bottom</code>.</p>
+  <code class="highlight">top</code> and
+  <code class="highlight">bottom</code>.</p>
 
 <h3>MccColorPickerItem</h3>
 <p>This interface is used when you have the name of the color. This can help screen readers.</p>
