fix(color-picker): selected icon also showing for color-collections defined as object

--- a/src/lib/color-picker/color-picker-collection.component.html
+++ b/src/lib/color-picker/color-picker-collection.component.html
@@ -12,7 +12,7 @@
           [mccColorPickerOption]="color" (click)="setColor(color)">
 
     <ng-container *ngIf="!disableSelectedIcon">
-      <mat-icon *ngIf="selectedColor !== color; else selectionIcon"></mat-icon>
+      <mat-icon *ngIf="!isColorSelected(color); else selectionIcon"></mat-icon>
       <ng-template #selectionIcon>
         <mat-icon *ngIf="selectedSvgIcon; else selectionFontIcon" class="mat-svg-icon" [svgIcon]="selectedSvgIcon"
                   [ngClass]="getIconColorClassForColor(color)"></mat-icon>
