feat(color-picker): correct label for rgb form, small changes

--- a/src/lib/color-picker/color-picker-selector.component.html
+++ b/src/lib/color-picker/color-picker-selector.component.html
@@ -27,7 +27,7 @@
 
     <form [formGroup]="rgbaForm">
       <mat-form-field class="rgb-input" floatLabel="always" [ngClass]="textClass">
-        <input matInput type="number" placeholder="RGBA" formControlName="R"/>
+        <input matInput type="number" [placeholder]="showAlphaSelector ? 'RGBA' : 'RGB'" formControlName="R"/>
       </mat-form-field>
       <mat-form-field class="rgb-input" floatLabel="always" [ngClass]="textClass">
         <input matInput type="number" formControlName="G"/>
