--- a/src/lib/color-picker/color-picker-selector.component.html
+++ b/src/lib/color-picker/color-picker-selector.component.html
@@ -1,17 +1,17 @@
 <div class="mcc-color-picker-selector" [ngStyle]="{ 'height.px': selectorHeight }">
   <div #block class="mcc-picker-selector" [style.height.px]="selectorHeight" [style.width.px]="selectorWidth"></div>
   <canvas #blockCanvas [height]="selectorHeight" [width]="selectorWidth" id="picker"></canvas>
-  <div #blockPointer class="mcc-picker-position" style="top: 0px;left: 220px;"></div>
+  <div #blockPointer class="mcc-picker-position" style="top: 0; left: 0;"></div>
 
   <div #hueContainer class="mcc-colors-position" [style.height.px]="selectorHeight"
        [ngClass]="{'alpha-enabled': showAlphaSelector}"
-       style="background-position-y: 0px;">
+       style="background-position-y: 0;">
     <canvas #hueSelector [height]="stripHeight" [width]="stripWidth" id="colors"></canvas>
   </div>
 
 
   <div *ngIf="showAlphaSelector" #alphaContainer class="mcc-alpha-position" [style.height.px]="selectorHeight"
-       style="background-position-y: 0px;">
+       style="background-position-y: 0;">
     <canvas #alpha [height]="stripHeight" [width]="stripWidth" id="alpha"></canvas>
   </div>
 
