--- a/src/lib/color-picker/color-picker.component.scss
+++ b/src/lib/color-picker/color-picker.component.scss
@@ -8,7 +8,7 @@
   border: 2px solid #dddddd;
 
   &.empty {
-    background: #ffffff !important;
+    background: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAB8AAAAfAQMAAAAlYIR6AAAABlBMVEX/////EBC8L+WmAAAAJ0lEQVR42mM4wAAED0DEBxBRASJsQIQciOAHEewNQIIZpJCRjgr5AP7LD2UBZrkqAAAAAElFTkSuQmCC') !important;
   }
   &.disabled {
     opacity: .5;
@@ -35,6 +35,7 @@
 }
 
 .transparent {
+  display: block;
   width: 32px;
   height: 2px;
   border-bottom: 2px solid red;
